--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   justify-content: center;
 }
 #getJoke {
-  display: flex;
-  justify-content: center;
+  background-color: rgb(83, 170, 221); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
